--- a/double_dqn.ipynb
+++ b/double_dqn.ipynb
@@ -73,7 +73,7 @@
     "        return self.q_net(state).max().item()\n",
     "\n",
     "    def get_max_next_q_values(self, next_states):\n",
-    "        return self.q_net(next_states).max(1)[0].view(-1, 1)\n",
+    "        return self.target_net(next_states).max(1)[0].view(-1, 1)\n",
     "    \n",
     "    def update(self, states, actions, rewards, next_states, terminateds):\n",
     "        states = torch.tensor(states,dtype=torch.float).to(self.device)\n",
